apps/sonarqube/overlays/prd/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarqube
  namespace: sonarqube
  annotations:
    link.argocd.argoproj.io/external-link: https://sonar.diegoluisi.eti.br
spec:
  hosts:
  - "sonar.analect.com"
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: sonarqube.sonarqube.svc.cluster.local
